# Credit-Card-Parser

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  bank_axis.py  bank_hdfc.py  bank_icici.py  bank_yesbank.py  ccparser.code-workspace  database.db  db.py  parsers.py  pyproject.toml  setup.cfg  test_app.py  test_transactions_hdfc.txt  vendors.py
test/: test_transactions_axis.txt  test_transactions_icici.txt  test_transactions_yes.txt
